--- a/src/assets/sass/components/_VSearch.scss
+++ b/src/assets/sass/components/_VSearch.scss
@@ -8,7 +8,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 2rem 0 1.8125rem 0;
+  margin: 0 0 1.8125rem 0;
   &__form {
     background: #ffffff;
     width: 100%;
