--- a/src/assets/sass/components/_VSearch.scss
+++ b/src/assets/sass/components/_VSearch.scss
@@ -9,6 +9,7 @@
   align-items: center;
   justify-content: center;
   margin: 0 0 1.8125rem 0;
+  border-radius: 8px;
   &__form {
     background: #ffffff;
     width: 100%;
