--- a/src/assets/sass/components/_VInput.scss
+++ b/src/assets/sass/components/_VInput.scss
@@ -4,16 +4,20 @@ input[type="text"] {
   border: 0;
   display: block;
   width: 100%;
-}
-//Search input
-.search input {
-  height: 47px;
-  padding: 0 0 0 1.2rem;
   font-size: 1rem;
   font-family: "Poppins-ExtraLight";
   &::placeholder {
     color: #b9bdcf;
     font-size: 0.75rem;
-    letter-spacing: 1px;
+    letter-spacing: 0.8px;
   }
+}
+//Search input
+.search input {
+  height: 47px;
+  padding: 0 0 0 1.2rem;
+}
+
+.location input {
+  padding: 0.5rem 0;
 }
