feat: add styles cards mobile and footer component

--- a/src/assets/sass/utils/_fonts.scss
+++ b/src/assets/sass/utils/_fonts.scss
@@ -39,3 +39,7 @@
   src: url("~@/assets/fonts/Roboto/Roboto-Regular.ttf");
   font-family: "Roboto-Regular";
 }
+@font-face {
+  src: url("~@/assets/fonts/Roboto/Roboto-Bold.ttf");
+  font-family: "Roboto-Bold";
+}
