--- a/src/assets/sass/utils/_wrapper.scss
+++ b/src/assets/sass/utils/_wrapper.scss
@@ -8,7 +8,7 @@
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: auto;
-  gap: 32px 26px;
+  gap: 26px 0;
   width: 100%;
   height: auto;
   align-items: center;
