--- a/src/assets/sass/components/_VSearch.scss
+++ b/src/assets/sass/components/_VSearch.scss
@@ -10,9 +10,11 @@
   justify-content: center;
   margin: 0 0 1.8125rem 0;
   border-radius: 8px;
+  grid-area: search;
   &__form {
     background: #ffffff;
     width: 100%;
+    max-width: 790px;
     padding: 0.25rem 0.3125rem;
     border-radius: 4px;
     box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.102);
@@ -35,5 +37,6 @@
   }
   &__button {
     width: 30%;
+    max-width: 146px;
   }
 }
