--- a/src/assets/sass/utils/_wrapper.scss
+++ b/src/assets/sass/utils/_wrapper.scss
@@ -1,7 +1,9 @@
 .wrapper {
-  padding: 0 13px;
   max-width: 1200px;
   margin: 0 auto;
+  @media screen and (min-width: 992px) {
+    padding: 0 13px;
+  }
 }
 
 .grid {
