--- a/src/assets/sass/App.scss
+++ b/src/assets/sass/App.scss
@@ -1,6 +1,9 @@
 #app {
   padding: 0.75rem;
   background: #f6f7fb;
+  @media screen and (min-width: 992px) {
+    padding: 2rem 0;
+  }
 }
 .main__title {
   font-size: 1.5rem;
