--- a/src/assets/sass/components/_VCardJob.scss
+++ b/src/assets/sass/components/_VCardJob.scss
@@ -1,6 +1,6 @@
 .card__job {
   width: 100%;
-  height: 147px;
+  height: 180px;
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
@@ -8,16 +8,13 @@
   box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.051);
   border-radius: 4px;
   &-image {
+    width: 90px;
+    height: 90px;
     margin: 0 1rem 0 0;
-    img {
-      width: 90px;
-      height: 90px;
-      object-fit: cover;
-      border-radius: 4px;
-    }
   }
   &-information {
     width: calc(100% - 106px);
+    height: 100%;
     position: relative;
   }
   &-name-enterprise {
@@ -29,7 +26,13 @@
   &-title {
     font-family: "Roboto-Regular";
     color: #334680;
+    height: auto;
+    line-height: 18px;
     margin: 0 0 0.75rem 0;
+    text-transform: lowercase;
+    &::first-letter {
+      text-transform: uppercase;
+    }
   }
   &-full-time {
     font-family: "Roboto-Bold";
@@ -51,20 +54,27 @@
     font-size: 12px;
     color: #b9bdcf;
     font-family: "Roboto-Regular";
+    position: absolute;
+    width: 100%;
+    bottom: 5px;
   }
   @media screen and (min-width: 992px) {
     height: 115px;
     &-geo-information {
-      width: 200px;
-      position: absolute;
+      width: auto;
       right: 0;
       bottom: 6px;
-    }
-    .label-full-time {
-      margin: 0;
+      .label__country {
+        margin: 0 10px 0 0;
+        max-width: 120px;
+      }
     }
     &-title {
       font-size: 18px;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      width: 300px;
     }
   }
 }
